# topa

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  IDEAS.md  LICENSE  MANIFEST.in  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  package.yml
docs/: integration.md  rationale.md  token_analysis.md
examples/: convert_samples.sh  sample_junit.xml  sample_pytest.txt  sample_rspec.json  sample_tap.txt
examples/expected_outputs/: junit_failures.yaml  pytest_summary.yaml
spec/: TOPA-v0.1.md  TOPA-v0.2.md  TOPAZ-v0.1.md  TOPAZ-v0.2.md  TOPAZ_v0.3_PROPOSAL.md  TOPA_v0.3_PROPOSAL.md
src/: __init__.py  topa.py
src/core/: __init__.py  encoder.py  schema.py  token_budget.py
src/parsers/: __init__.py  base.py  junit.py  pytest.py  rspec.py  tap.py
src/tpane/: __init__.py  __main__.py
src/tpane/core/: __init__.py  encoder.py  encoder_v3.py  schema.py  token_budget.py
src/tpane/parsers/: __init__.py  base.py  junit.py  pytest.py  rspec.py  tap.py
tests/: __init__.py  test_parsers.py
